--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "vue": "^3.2.16"
@@ -14,8 +15,10 @@
     "@typescript-eslint/parser": "^5.6.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "chalk": "^4.1.0",
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
+    "husky": "^7.0.0",
     "sass": "^1.44.0",
     "typescript": "^4.5.2",
     "vite": "^2.6.4",
