--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint --fix --ext .js,vue src/"
   },
   "dependencies": {
-    "vue": "^3.2.16"
+    "vue": "^3.2.16",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
