--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "prepare": "husky install",
-    "lint": "eslint --fix --ext .js,vue src/"
+    "lint": "eslint --fix --ext .js,vue src/",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^3.2.16",
@@ -14,17 +15,26 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "babel-jest": "^26.6.3",
     "chalk": "^4.1.0",
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.0",
+    "jest": "^26.6.3",
     "sass": "^1.44.0",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.5.2",
     "vite": "^2.6.4",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.3.0"
   }
 }
